Created reference solution file

--- a/main.ipynb
+++ b/main.ipynb
@@ -14,10 +14,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.7.13 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.7.13"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d83ab0d64be14c09b020a29be08d34c040451b024ad9b96fa91c39dea0fcc4fe"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
